[gd_scene load_steps=7 format=2]

[ext_resource path="res://background/Background.gd" type="Script" id=1]
[ext_resource path="res://universe/space_gas.shader" type="Shader" id=2]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 2 )
shader_param/color = null
shader_param/fade = null

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 2 )
shader_param/color = null
shader_param/fade = null

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 2 )
shader_param/color = null
shader_param/fade = null

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 2 )
shader_param/color = null
shader_param/fade = null

[node name="Background" type="Node2D"]
script = ExtResource( 1 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="WarpSpeed" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0, 0 )

[node name="Stars" type="Sprite" parent="ParallaxBackground/WarpSpeed"]
modulate = Color( 1, 1, 1, 0 )
region_rect = Rect2( 0, 0, 320, 180 )

[node name="FarStars" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.01, 0.01 )

[node name="FarStars" type="Sprite" parent="ParallaxBackground/FarStars"]
region_rect = Rect2( 0, 0, 320, 180 )

[node name="FarStars2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.02, 0.02 )

[node name="FarStars" type="Sprite" parent="ParallaxBackground/FarStars2"]
region_rect = Rect2( 0, 0, 320, 180 )

[node name="FarGas" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.04, 0.04 )

[node name="FarGas1" type="Sprite" parent="ParallaxBackground/FarGas"]
material = SubResource( 1 )
scale = Vector2( 2, 2 )
region_rect = Rect2( 0, 0, 320, 180 )

[node name="FarGas2" type="Sprite" parent="ParallaxBackground/FarGas"]
material = SubResource( 2 )
scale = Vector2( 2, 2 )
region_rect = Rect2( 0, 0, 320, 180 )

[node name="MidStars" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.1, 0.1 )

[node name="MidStars" type="Sprite" parent="ParallaxBackground/MidStars"]
region_rect = Rect2( 0, 0, 320, 180 )

[node name="MidGas" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.2, 0.2 )

[node name="MidGas1" type="Sprite" parent="ParallaxBackground/MidGas"]
material = SubResource( 3 )
scale = Vector2( 2, 2 )

[node name="MidGas2" type="Sprite" parent="ParallaxBackground/MidGas"]
material = SubResource( 4 )
scale = Vector2( 2, 2 )

[node name="NearStars" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.85, 0.85 )

[node name="NearStars" type="Sprite" parent="ParallaxBackground/NearStars"]
scale = Vector2( 2, 2 )
region_rect = Rect2( 0, 0, 320, 180 )

[node name="Tween" type="Tween" parent="."]
